<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_process_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_processName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_process_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_text_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_process_name" />

    <TextView
        android:id="@+id/lbl_process_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_processTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_process_name"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/lbl_interval_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_intervalTime"
        app:layout_constraintLeft_toRightOf="@+id/lbl_process_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_process_name"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/edit_process_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_process_time"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_text_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_process_time"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/edit_interval_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_interval_time"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_text_height"
        app:layout_constraintLeft_toRightOf="@id/edit_process_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_interval_time"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sound_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_sound_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/switch_sound_interval"
        app:layout_constraintTop_toBottomOf="@id/edit_process_time" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sound_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_sound_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/switch_sound_interval"
        app:layout_constraintTop_toBottomOf="@id/switch_sound_start" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sound_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_sound_interval"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sound_end" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sound_metronome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_sound_metronome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sound_interval" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_lead_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_lead_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sound_metronome" />

    <TextView
        android:id="@+id/lbl_lead_in_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_lead_in_time"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@id/switch_lead_in"
        app:layout_constraintLeft_toRightOf="@id/switch_lead_in"
        app:layout_constraintTop_toTopOf="@id/switch_lead_in" />

    <EditText
        android:id="@+id/edit_lead_in_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="5"
        android:inputType="number"
        android:minHeight="@dimen/min_text_height"
        android:minEms="3"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@id/switch_lead_in"
        app:layout_constraintLeft_toRightOf="@+id/lbl_lead_in_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/switch_lead_in" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_chain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_has_chain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lead_in_time" />

    <TextView
        android:id="@+id/lbl_goto_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_goto_id"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_chain" />

    <Spinner
        android:id="@+id/spinner_goto_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_goto_id" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_chain_pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_goto_pause_time"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_goto_id" />

    <TextView
        android:id="@+id/lbl_chain_pause_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_text_height"
        android:text="@string/lbl_chain_pause_time"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_chain_pause" />

    <EditText
        android:id="@+id/edit_goto_pause_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="10"
        android:minHeight="@dimen/min_text_height"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_chain_pause_time"
        app:layout_constraintLeft_toRightOf="@+id/lbl_chain_pause_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_chain_pause" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:cornerRadius="@dimen/normal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>